Further work on economics

--- a/__site/desert/index.html
+++ b/__site/desert/index.html
@@ -337,7 +337,7 @@
 <p>In terms of educational attainment, 53.33% of the population has a college degree, of which 14.33% are graduate-level degrees.</p>	 
 	</p>
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
-<h2 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h2>
+<h3 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h3>
 <div class="marginnote">Source: <a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD">World Bank</a></div>
 <p>Deseret has a gross domestic product that ranks sixth, behind Illinois, in the United States. It accounts for about 3.8&#37; of the national gross domestic product. </p>
 
@@ -438,11 +438,12 @@
 	 
 
 <div class="marginnote">Sources: <a href="https://ustr.gov/map/state-benefits/co">Colorado</a>, <a href="https://ustr.gov/map/state-benefits/ut">Utah</a>, <a href="https://ustr.gov/map/state-benefits/mt">Montana</a>, <a href="https://ustr.gov/map/state-benefits/id">Idado</a>, <a href="https://ustr.gov/map/state-benefits/wy">Wyoming</a></div>
+<p>The states of Desert export &#36;37.3 billion in goods.</p>
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
-<p>In 2024, Colorado goods exports were &#36;10.5 billion. The state&#39;s largest manufacturing export category is food &amp; kindred products, followed by computer and electronic products, machinery, chemicals and transportation equipment. </p>
 <p>In 2024, Utah goods exports were &#36;18.2 billion. The state&#39;s largest manufacturing export category is primary metal manufacturing, followed by computer and electronic products, chemicals, miscellaneous manufactured commodities and transportation equipment.</p>
-<p>In 2024, Montana goods exports were &#36;2.4 billion. The state&#39;s largest manufacturing export category is chemicals, followed by machinery, transportation equipment, primary metal manufacturing and nonmetallic mineral products.</p>
+<p>In 2024, Colorado goods exports were &#36;10.5 billion. The state&#39;s largest manufacturing export category is food &amp; kindred products, followed by computer and electronic products, machinery, chemicals and transportation equipment. </p>
 <p>In 2024, Idaho exported &#36;4.2 billion of goods to the world. The state&#39;s largest manufacturing export category is food and kindred products, followed by computer and electronic products, chemicals, machinery and primary metal manufacturing.</p>
+<p>In 2024, Montana goods exports were &#36;2.4 billion. The state&#39;s largest manufacturing export category is chemicals, followed by machinery, transportation equipment, primary metal manufacturing and nonmetallic mineral products.</p>
 <p>In 2024, Wyoming goods exports were &#36;2.1 billion. The state&#39;s largest manufacturing export category is chemicals, followed by computer and electronic products, machinery, petroleum and coal products and transportation equipment.</p>
 <h3 id="agriculture"><a href="#agriculture" class="header-anchor">Agriculture</a></h3>
 <p>Colorado&#39;s food and agriculture industry generates over &#36;5 billion in economic output annually from livestock, wheat, corn, barley, potatoes, hay, and specialty crops like cantaloupe and lettuce.The market value of agricultural products in Utah exceeds &#36;2.3 billion annually, with livestock and dairy being significant contributors. Montana&#39;s agricultural products are valued at over &#36;4.5 billion annually, with cattle and wheat being major contributors. Idaho grows potatoes, wheat, barley, hay and sugar beets. Wyoming produces livestock, hay, alfalfa, and small grains like wheat and barley.</p>
@@ -458,7 +459,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 10, 2025.
+     Richard Careaga. Last modified: March 11, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
