--- a/__site/heart/index.html
+++ b/__site/heart/index.html
@@ -470,6 +470,14 @@
 	 
 
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
+<div class="marginnote">Sources: <a href="https://ustr.gov/map/state-benefits/mn">Minnesota</a>, <a href="https://ustr.gov/map/state-benefits/ia">Iowa</a>, <a href="https://ustr.gov/map/state-benefits/mo">Missouri</a>, <a href="https://ustr.gov/map/state-benefits/nd">North Dakota</a>, <a href="https://ustr.gov/map/state-benefits/sd">South Dakota</a>, <a href="https://ustr.gov/map/state-benefits/ne">Nebraska</a>, <a href="https://ustr.gov/map/state-benefits/ks">Kansas</a></div>
+<p>In 2024, Minnesota goods exports were &#36;26.6 billion, In 2024, Minnesota exported &#36;24.6 billion of manufactured products. The state&#39;s largest manufacturing export category is computer &amp; electronic products, followed by machinery, transportation equipment, petroleum and coal products and miscellaneous manufactured commodities. </p>
+<p>In 2024, Iowa exported &#36;17.0 billion of goods to the world. In 2024, Iowa goods exports were &#36;17.0 billion. In 2024, Iowa exported &#36;14.8 billion of manufactured products. The state&#39;s largest manufacturing export category is food &amp; kindred products, followed by machinery, chemicals, transportation equipment and computer and electronic products. </p>
+<p>Missouri goods exports were &#36;19.4 billion. In 2024, Missouri exported &#36;17.0 billion of manufactured products. The state&#39;s largest manufacturing export category is transportation equipment, followed by chemicals, machinery, food and kindred products and computer and electronic products. </p>
+<p>In 2024, North Dakota exported &#36;5.5 billion of goods to the world. In 2024, North Dakota exported &#36;4.0 billion of manufactured products. The state&#39;s largest manufacturing export category is petroleum and coal products, followed by machinery, chemicals, food and kindred products and transportation equipment.</p>
+<p>In 2024, South Dakota exported &#36;2.1 billion of goods to the world. In 2024, South Dakota goods exports were &#36;2.1 billion, In 2024, South Dakota exported &#36;1.9 billion of manufactured products. The state&#39;s largest manufacturing export category is food and kindred products, followed by chemicals, machinery, beverages and tobacco product and transportation equipment.</p>
+<p>In 2024, Nebraska exported &#36;8.2 billion of goods to the world. In 2024, Nebraska exported &#36;6.9 billion of manufactured products. The state&#39;s largest manufacturing export category is food and kindred products, followed by machinery, chemicals, transportation equipment and computer and electronic products.</p>
+<p>In 2024, Kansas exported &#36;14.4 billion of goods to the world. In 2024, Kansas exported &#36;12.6 billion of manufactured products. The state&#39;s largest manufacturing export category is transportation equipment, followed by food and kindred products, computer and electronic products, machinery and chemicals.</p>
 <h3 id="food"><a href="#food" class="header-anchor">Food</a></h3>
 <h3 id="resource_extraction"><a href="#resource_extraction" class="header-anchor">Resource Extraction</a></h3>
 <h3 id="services"><a href="#services" class="header-anchor">Services</a></h3>
@@ -481,7 +489,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 09, 2025.
+     Richard Careaga. Last modified: March 11, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
