--- a/__site/lonestar/index.html
+++ b/__site/lonestar/index.html
@@ -317,7 +317,7 @@
 <p>In terms of educational attainment, 42.48% of the population has a college degree, of which 11.23% are graduate-level degrees.</p>	 
 
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
-<h2 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h2>
+<h3 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h3>
 <div class="marginnote">Source: <a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD">World Bank</a></div>
 <p>The Lone Star Republic has a gross domestic product that ranks second, behind California, in the United States. It accounts for about 11.8&#37; of the national gross domestic product. </p>
 
@@ -418,6 +418,11 @@
 	 
 
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
+<div class="marginnote">Sources: <a href="https://ustr.gov/map/state-benefits/tx">Texas</a>, <a href="https://ustr.gov/map/state-benefits/la">Louisiana</a>, <a href="https://ustr.gov/map/state-benefits/ar">Arkansas</a>, <a href="https://ustr.gov/map/state-benefits/ok">Oklahoma</a></div>
+<p>In 2024, Texas exported &#36;455.0 billion of goods to the world. In 2024, Texas goods exports were &#36;455.0 billion. In 2024, Texas exported &#36;293.2 billion of manufactured products. The state&#39;s largest manufacturing export category is petroleum and coal products, followed by computer and electronic products, chemicals, transportation equipment and machinery. </p>
+<p>In 2024, Louisiana exported &#36;87.0 billion of goods to the world. In 2024, Louisiana exported &#36;42.8 billion of manufactured products. The state&#39;s largest manufacturing export category is petroleum and coal products followed by chemicals, food and kindred products, machinery and wood products.</p>
+<p>In 2024, Arkansas exported &#36;6.9 billion of goods to the world. In 2024, Arkansas exported &#36;6.1 billion of manufactured products. The state&#39;s largest manufacturing export category is transportation equipment, followed by food and kindred products, chemicals, machinery and paper. </p>
+<p>In 2024, Oklahoma exported &#36;7.7 billion of goods to the world. In 2024, Oklahoma exported &#36;7.4 billion of manufactured products. The state&#39;s largest manufacturing export category is transportation equipment, followed by machinery, chemicals, computer and electronic products and fabricated metal products.</p>
 <h3 id="food"><a href="#food" class="header-anchor">Food</a></h3>
 <h3 id="resource_extraction"><a href="#resource_extraction" class="header-anchor">Resource Extraction</a></h3>
 <h3 id="services"><a href="#services" class="header-anchor">Services</a></h3>
@@ -429,7 +434,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 09, 2025.
+     Richard Careaga. Last modified: March 11, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
