--- a/__site/metro/index.html
+++ b/__site/metro/index.html
@@ -345,7 +345,7 @@
 <p>In terms of educational attainment, 59.86% of the population has a college degree, of which 18.34% are graduate-level degrees.</p>	 
 
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
-<h2 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h2>
+<h3 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h3>
 <div class="marginnote">Source: <a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD">World Bank</a></div>
 <p>Metropolis has a gross domestic product that ranks first, ahead of California, in the United States. It accounts for about 15.7&#37; of the national gross domestic product. </p>
 
@@ -446,6 +446,13 @@
 	 
 
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
+<div class="marginnote">Sources: <a href="https://ustr.gov/map/state-benefits/ny">New York</a>, <a href="https://ustr.gov/map/state-benefits/pa">Pennsylvania</a>, <a href="https://ustr.gov/map/state-benefits/va">Virginia</a>, <a href="https://ustr.gov/map/state-benefits/md">Maryland</a>, <a href="https://ustr.gov/map/state-benefits/de">Delaware</a>, <a href="https://ustr.gov/map/state-benefits/nj">New Jersey</a></div>
+<p>In 2024, New York exported &#36;91.2 billion of goods to the world. In 2024, New York exported &#36;72.7 billion of manufactured products. The state&#39;s largest manufacturing export category is miscellaneous manufactured commodities, followed by primary metal manufacturing, computer and electronic products, chemicals and machinery. </p>
+<p>In 2024, Pennsylvania goods exports were &#36;53.2 billion. In 2024, Pennsylvania exported &#36;45.9 billion of manufactured products. The state&#39;s largest manufacturing export category is chemicals, followed by computer and electronic products, machinery, primary metal manufacturing and transportation equipment.</p>
+<p>In 2024, New Jersey goods exports were &#36;42.9 billion. In 2024, New Jersey exported &#36;37.7 billion of manufactured products. The state&#39;s largest manufacturing export category is chemicals, followed by computer and electronic products, primary metal manufacturing, miscellaneous manufactured commodities and petroleum and coal products.</p>
+<p>In 2024, Virginia goods exports were &#36;21.8 billion. In 2024, Virginia exported &#36;15.4 billion of manufactured products. The state&#39;s largest manufacturing export category is chemicals, followed by computer and electronic products, transportation equipment, machinery, and food and kindred products.</p>
+<p>In 2024, Maryland goods exports were &#36;17.9 billion. In 2024, Maryland exported &#36;13.2 billion of manufactured products. The state&#39;s largest manufacturing export category is transportation equipment, followed by chemicals, machinery, computer and  electronic products and electrical equipment, appliances and components.</p>
+<p>In 2024, Delaware goods exports were &#36;4.7 billion. In 2024, Delaware exported &#36;4.4 billion of manufactured products. The state&#39;s largest manufacturing export category is chemicals, followed by computer and electronic products, machinery, transportation equipment and plastics and rubber products.</p>
 <h3 id="food"><a href="#food" class="header-anchor">Food</a></h3>
 <h3 id="resource_extraction"><a href="#resource_extraction" class="header-anchor">Resource Extraction</a></h3>
 <h3 id="services"><a href="#services" class="header-anchor">Services</a></h3>
@@ -457,7 +464,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 09, 2025.
+     Richard Careaga. Last modified: March 11, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
