--- a/__site/cumber/index.html
+++ b/__site/cumber/index.html
@@ -297,7 +297,7 @@
 <p>In terms of educational attainment, 39.46% of the population has a college degree, of which 11.04% are graduate-level degrees.</p>	 
 
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
-<h2 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h2>
+<h3 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h3>
 <div class="marginnote">Source: <a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD">World Bank</a></div>
 <p>Cumberland has a gross domestic product that ranks seventh, behind Pennsylvania, in the United States. It accounts for about 3.2&#37; of the national gross domestic product. </p>
 
@@ -398,8 +398,10 @@
 	 
 
 <div class="marginnote">Sources: <a href="https://ustr.gov/map/state-benefits/ky">Kentucky</a>, <a href="https://ustr.gov/map/state-benefits/tn">Tennessee</a>, <a href="https://ustr.gov/map/state-benefits/wv">West Virginia</a></div>
+<p>The three states of Cumberland export &#36;91.6 billion in goods.</p>
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
-<p>In 2024, Kentucky goods exports were &#36;47.8 billion. The state&#39;s largest manufacturing export category is transportation equipment, followed by chemicals, computer and electronic products, machinery and fabricated metal products. In 2024, Tennessee goods exports were &#36;38.9 billion. The state&#39;s largest manufacturing export category is computer and electronic products, followed by  transportation equipment, chemicals, miscellaneous manufactured commodities and machinery.</p>
+<p>In 2024, Kentucky goods exports were &#36;47.8 billion. The state&#39;s largest manufacturing export category is transportation equipment, followed by chemicals, computer and electronic products, machinery and fabricated metal products. </p>
+<p>In 2024, Tennessee goods exports were &#36;38.9 billion. The state&#39;s largest manufacturing export category is computer and electronic products, followed by  transportation equipment, chemicals, miscellaneous manufactured commodities and machinery.</p>
 <p>In 2024, West Virginia exported &#36;4.9 billion of goods to the world. The state&#39;s largest manufacturing export category is chemicals, followed by transportation equipment, machinery, primary metal manufacturing and petroleum and coal products.</p>
 <h3 id="agriculture"><a href="#agriculture" class="header-anchor">Agriculture</a></h3>
 <p>Kentucky produces soybeans, chicken, cattle, horses and corn. Tennessee production of agricultural commodities is smaller—none of its products is has as large a value as the Kentucky produce. The total value of all of West Virginia&#39;s crops is smaller than any of the leading crops of the other two states.</p>
@@ -415,7 +417,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 10, 2025.
+     Richard Careaga. Last modified: March 11, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
