--- a/__site/factor/index.html
+++ b/__site/factor/index.html
@@ -356,7 +356,7 @@
 <p>In terms of educational attainment, 45.87% of the population has a college degree, of which 12.83% are graduate-level degrees.</p>	 
 
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
-<h2 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h2>
+<h3 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h3>
 <div class="marginnote">Source: <a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD">World Bank</a></div>
 <p>Factoria has a gross domestic product that ranks first, ahead of California, in the United States. It accounts for about 16.3&#37; of the national gross domestic product. </p>
 
@@ -456,11 +456,20 @@
 </table>
 	 
 
+<p>The Factoria states export &#36;286.4 in goods each year.</p>
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
+<div class="marginnote">Sources: <a href="https://ustr.gov/map/state-benefits/il">Illinois</a>, <a href="https://ustr.gov/map/state-benefits/mi">Michigan</a>, <a href="https://ustr.gov/map/state-benefits/oh">Ohio</a>, <a href="https://ustr.gov/map/state-benefits/in">Indiana</a>, <a href="https://ustr.gov/map/state-benefits/wi">Wisconsin</a></div>
+<p>In 2024, Illinois exported a record &#36;80.8 billion of goods to the world. In 2024, Illinois exported &#36;72.8 billion of manufactured products. The state&#39;s largest manufacturing export category is chemicals,followed by machinery,computer and electronic products, transportation equipment and food and kindred products.</p>
+<p>In 2024, Michigan exported &#36;61.6 billion of goods to the world. In 2024, Michigan exported &#36;58.9 billion of manufactured products. The state&#39;s largest manufacturing export category is transportation equipment, followed by machinery, chemicals, electrical equipment, appliances and components and computer and electronic products.</p>
+<p>In 2024, Indiana exported a record &#36;59.9 billion of goods to the world. In 2024, Indiana exported &#36;59.0 billion of manufactured products. The state&#39;s largest manufacturing export category is chemicals, followed by transportation equipment, machinery, miscellaneous manufactured commodities and computer and electronic products.</p>
+<p>In 2024, Ohio exported &#36;56.6 billion of goods to the world. In 2024, Ohio exported &#36;52.8 billion of manufactured products. The state&#39;s largest manufacturing export category is transportation equipment, followed by chemicals, machinery, fabricated metal products and primary metal manufacturing.</p>
+<p>In 2024, Wisconsin exported &#36;27.5 billion of goods to the world. In 2024, Wisconsin exported &#36;26.3 billion of manufactured products. The state&#39;s largest manufacturing export category is machinery, followed by computer and electronic products, transportation equipment, chemicals and food and kindred products.</p>
 <h3 id="food"><a href="#food" class="header-anchor">Food</a></h3>
+<p>The states of Factoria produce soybean, corn and wheat, as well as livestock. In addition, Wisconsin is a major producer of dairy products.</p>
 <h3 id="resource_extraction"><a href="#resource_extraction" class="header-anchor">Resource Extraction</a></h3>
+<p>Illinois and Indiana produce coal and Ohio produces natural gas.</p>
 <h3 id="services"><a href="#services" class="header-anchor">Services</a></h3>
-<h3 id="balance_of_trade"><a href="#balance_of_trade" class="header-anchor">Balance of Trade</a></h3>
+<p>In 2022, Illinois exported &#36;43 billion in services, with digitally tradable services accounting for &#36;28 billion. Key sectors include financial services, insurance services, and telecom, computer, and information services. Michigan&#39;s services exports totaled &#36;14 billion in 2022, with digitally tradable services at &#36;7.8 billion. Key sectors include financial services, insurance services, and telecom, computer, and information services. In 2022, Indiana exported nearly &#36;8 billion in services, with digitally tradable services at &#36;6.6 billion. Key sectors include financial services, insurance services, and telecom, computer, and information services.  Ohio exported &#36;23 billion in services in 2022, with digitally tradable services at &#36;15 billion. Key sectors include financial services, insurance services, and telecom, computer, and information services. Wisconsin exported &#36;8.4 billion in services in 2023.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
 <p></p>
 <div class="page-foot">
@@ -468,7 +477,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 09, 2025.
+     Richard Careaga. Last modified: March 11, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
