--- a/__site/pacific/index.html
+++ b/__site/pacific/index.html
@@ -296,7 +296,7 @@
 <p>In terms of educational attainment, 52.27% of the population has a college degree, of which 14.53% are graduate-level degrees.</p>	 
 
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
-<h2 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h2>
+<h3 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h3>
 <div class="marginnote">Source: <a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD">World Bank</a></div>
 <p>Pacifica has a gross domestic product that ranks fifth, behind Florida, in the United States. It accounts for about 4.9&#37; of the national gross domestic product. </p>
 
@@ -397,10 +397,18 @@
 	 
 
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
+<div class="marginnote">Sources: <a href="https://ustr.gov/map/state-benefits/wa">Washington</a>, <a href="https://ustr.gov/map/state-benefits/or">Oregon</a>, <a href="https://ustr.gov/map/state-benefits/ak">Alaska</a></div>
+<p>In 2024, Washington goods exports were &#36;57.8 billion In 2024, Washington exported &#36;40.7 billion of manufactured products. The state&#39;s largest manufacturing export category is transportation equipment, followed by computer and electronic products, petroleum and coal products and machinery.</p>
+<p>In 2024, Oregon goods exports were &#36;34.1 billion. In 2024, Oregon exported &#36;31.8 billion of manufactured products. The state&#39;s largest manufacturing export category is computer and electronic products, followed by transportation equipment, machinery, chemicals, and electrical equipment, appliances &amp; components.</p>
+<p>In 2024, Alaska goods exports were &#36;5.9 billion. In 2024, Alaska exported &#36;1.4 billion of manufactured products. The state&#39;s largest manufacturing export category is primary metal manufacturing, followed by transportation equipment, petroleum and coal products, computer and electronic products and food and kindred products.</p>
 <h3 id="food"><a href="#food" class="header-anchor">Food</a></h3>
+<p>Washington is a major agricultural exporter, with &#36;7.5 billion in food and agriculture exports in 2023 potatoes, fish and seafood, wheat, apples, dairy and hay. Washington is the leading U.S. producer of hops, apples, and blueberries.</p>
+<p>Oregon exported over &#36;2 billion in agricultural goods exported including seeds, cut flowers, and other horticulture. Oregon is the number one U.S. producer of blackberries, hazelnuts, peppermint, cranberries, rhubarb, grass seed, florist azaleas, and Christmas trees.</p>
+<p>Alaska&#39;s agricultural exports are more limited compared to Washington and Oregon, totaled &#36;20.6 million in 2022.</p>
 <h3 id="resource_extraction"><a href="#resource_extraction" class="header-anchor">Resource Extraction</a></h3>
+<p>Washington exports &#36;1.1 billion in fish and seafood and &#36;3.06 billion in forest products in 2021. Oregon is also a significant exporter of forest products. Alaska exports zinc and lead ores and concentrates and frozen seafood.</p>
 <h3 id="services"><a href="#services" class="header-anchor">Services</a></h3>
-<h3 id="balance_of_trade"><a href="#balance_of_trade" class="header-anchor">Balance of Trade</a></h3>
+<p>Washington&#39;s service exports are primarily dominated by the technology sector including software development and cloud computing services. Oregon also exports technology services and has a tourist industry. Alaska&#39;s service exports are largely centered around its unique geographical and natural features for tourism and international freight operations.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
 <p></p>
 <div class="page-foot">
@@ -408,7 +416,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 09, 2025.
+     Richard Careaga. Last modified: March 12, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
