--- a/__site/desert/index.html
+++ b/__site/desert/index.html
@@ -438,7 +438,7 @@
 	 
 
 <div class="marginnote">Sources: <a href="https://ustr.gov/map/state-benefits/co">Colorado</a>, <a href="https://ustr.gov/map/state-benefits/ut">Utah</a>, <a href="https://ustr.gov/map/state-benefits/mt">Montana</a>, <a href="https://ustr.gov/map/state-benefits/id">Idado</a>, <a href="https://ustr.gov/map/state-benefits/wy">Wyoming</a></div>
-<p>The states of Desert export &#36;37.3 billion in goods.</p>
+<p>The states of Deseret export &#36;37.3 billion in goods.</p>
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
 <p>In 2024, Utah goods exports were &#36;18.2 billion. The state&#39;s largest manufacturing export category is primary metal manufacturing, followed by computer and electronic products, chemicals, miscellaneous manufactured commodities and transportation equipment.</p>
 <p>In 2024, Colorado goods exports were &#36;10.5 billion. The state&#39;s largest manufacturing export category is food &amp; kindred products, followed by computer and electronic products, machinery, chemicals and transportation equipment. </p>
