--- a/__site/heart/index.html
+++ b/__site/heart/index.html
@@ -479,9 +479,11 @@
 <p>In 2024, Nebraska exported &#36;8.2 billion of goods to the world. In 2024, Nebraska exported &#36;6.9 billion of manufactured products. The state&#39;s largest manufacturing export category is food and kindred products, followed by machinery, chemicals, transportation equipment and computer and electronic products.</p>
 <p>In 2024, Kansas exported &#36;14.4 billion of goods to the world. In 2024, Kansas exported &#36;12.6 billion of manufactured products. The state&#39;s largest manufacturing export category is transportation equipment, followed by food and kindred products, computer and electronic products, machinery and chemicals.</p>
 <h3 id="food"><a href="#food" class="header-anchor">Food</a></h3>
+<p>New York has a large dairy industry, and has over a million acres planted in sweet and field corn. Pennsylvania also has a large dairy industry and is the leading producer of mushrooms in the United States. Both New York and Pennsylvania are significant producers of apples. New Jersey is known for producing over 100 types of fruits and vegetables, including blueberries, cranberries, peaches, and tomatoes. The poultry industry, including broilers, turkeys, and eggs, is Virginia&#39;s leading agricultural sector.</p>
 <h3 id="resource_extraction"><a href="#resource_extraction" class="header-anchor">Resource Extraction</a></h3>
+<p>Pennsylvania is a major producer of coal, oil, and natural gas, particularly from the Marcellus shale. Maryland has significant coal mining in its western counties.</p>
 <h3 id="services"><a href="#services" class="header-anchor">Services</a></h3>
-<h3 id="balance_of_trade"><a href="#balance_of_trade" class="header-anchor">Balance of Trade</a></h3>
+<p>New York is a global hub for financial services, with significant exports in management and advisory services &#40;&#36;25 billion&#41; and other financial services and digitally tradable services.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
 <p></p>
 <div class="page-foot">
@@ -489,7 +491,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 11, 2025.
+     Richard Careaga. Last modified: March 12, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
