--- a/__site/sonora/index.html
+++ b/__site/sonora/index.html
@@ -335,7 +335,7 @@
 <p>In terms of educational attainment, 48.45% of the population has a college degree, of which 13.56% are graduate-level degrees.</p>	 
 
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
-<h2 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h2>
+<h3 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h3>
 <div class="marginnote">Source: <a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD">World Bank</a></div>
 <p>New Sonora has a gross domestic product that ranks first, ahead of California, in the United States. It accounts for about 18.0&#37; of the national gross domestic product. </p>
 
@@ -436,17 +436,25 @@
 	 
 
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
+<div class="marginnote">Sources: <a href="https://ustr.gov/map/state-benefits/ca">California</a>, <a href="https://ustr.gov/map/state-benefits/az">Arizona</a>, <a href="https://ustr.gov/map/state-benefits/nm">New Mexico</a>, <a href="https://ustr.gov/map/node/7244">Nevada</a>, <a href="https://ustr.gov/map/state-benefits/hi">Hawaii</a></div>
+<p>In 2024, California goods exports were &#36;183.3 billion. In 2024, California exported &#36;158.7 billion of manufactured products. The state&#39;s largest manufacturing export category is computer and electronic products, followed by machinery, transportation equipment, chemicals and miscellaneous manufactured commodities.</p>
+<p>In 2024, Arizona goods exports were &#36;32.2 billion. In 2024, Arizona exported &#36;27.8 billion of manufactured products. The state&#39;s largest manufacturing export category is computer and electronic products, followed by transportation equipment, machinery, electrical equipment, appliances and components and miscellaneous manufactured commodities. </p>
+<p>In 2024, New Mexico goods exports were &#36;12.0 billion, In 2024, New Mexico exported &#36;11.6 billion of manufactured products. The state&#39;s largest manufacturing export category is computer and electronic products, followed by electrical equipment, appliances and components, chemicals, food and kindred products and machinery.</p>
+<p>In 2018, Nevada goods exports were &#36;11.1 billion. In 2018, Nevada exported &#36;10.4 billion of manufactured products. The state&#39;s largest manufacturing export category is primary metal manufacturing, followed by computer and electronic products, miscellaneous manufactured commodities, electrical equipment, appliances and components and machinery.</p>
+<p>In 2024, Hawaii goods exports were &#36;461 million. In 2024, Hawaii exported &#36;305 million of manufactured products. The state&#39;s largest manufacturing export category is transportation equipment, followed by petroleum and coal products, food and kindred products, computer and electronic products and electrical equipment, appliances and components.</p>
 <h3 id="food"><a href="#food" class="header-anchor">Food</a></h3>
+<p>California is the leading farm-export state in the U.S., with agricultural exports totaling about &#36;24 billion. The state&#39;s top agricultural exports include almonds, dairy and dairy products, pistachios and win. Arizona&#39;s top agricultural export is cotton. Major world exports from New Mexico include tree nuts, dairy, wheat and wheat products, and grain and grain products.</p>
 <h3 id="resource_extraction"><a href="#resource_extraction" class="header-anchor">Resource Extraction</a></h3>
+<p>California is a significant producer of crude oil and natural gas. Arizona is a leading copper-producing state in the U.S. Arizona also produces molybdenum. New Mexico is also a major producer of copper and potash. Nevada is the top gold-producing state in the U.S.</p>
 <h3 id="services"><a href="#services" class="header-anchor">Services</a></h3>
-<h3 id="balance_of_trade"><a href="#balance_of_trade" class="header-anchor">Balance of Trade</a></h3>
-<h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
+<p>California is a leader in service exports, with total service exports reaching &#36;162 billion in 2019. Key sectors include, business, professional, and technical services, financial and insurance services, royalties ands license fees, telecommunications, computer and information services, travel and tourism and educational services, particularly to countries like China, Canada, and Mexico.</p>
+<p>Nevada service exports are dominated by tourism and entertainment as are Hawaii&#39;s service exports</p>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 09, 2025.
+     Richard Careaga. Last modified: March 12, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
